# 4_1_1_but_better

./: CMakeLists.txt  child.cpp  child.h  child2.cpp  child2.h  child3.cpp  child3.h  child4.cpp  child4.h  child5.cpp  child5.h  child6.cpp  child6.h  child7.cpp  child7.h  cl_application.cpp  cl_application.h  cl_base.cpp  cl_base.h  main.cpp  task.txt  test.txt
