cmake_minimum_required(VERSION 3.20)
project(4_1_1_but_better)

set(CMAKE_CXX_STANDARD 23)

add_executable(4_1_1_but_better main.cpp cl_application.h cl_base.h cl_base.cpp cl_application.cpp child2.h child3.h child4.h child5.h child6.h child2.cpp child3.cpp child4.cpp child5.cpp child6.cpp child7.h child7.cpp)
